<package format="2">
  <name>foscam_8918_driver</name>
  <version>0.0.1</version>
  <description>
    ROS driver that uses OpenCV to get image stream from Foscam 8918 IP camera
    and publish with image transport.
  </description>
  <author>Thomas Denewiler</author>
  <maintainer email="tdenewiler@gmail.com">Thomas Denewiler</maintainer>
  <license>BSD</license>
  <url>http://github.com/tdenewiler/foscam_8918_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
